# IntelligenceOS

./: .dockerignore  .env.example  .gitignore  .vercelignore  MCP_PLAN.md  PLAN.md  README.md  STATUS.md  middleware.ts  next.config.ts  package-lock.json  package.json
Clinic sales agent/: .env.example  (+6 more)
gtm-pipeline/: .dockerignore  Dockerfile  README.md  SCOPE_AND_CQC.md  pyproject.toml  railway.toml
gtm-pipeline/config/: doctify_scope.csv
gtm-pipeline/scripts/: apply_010_migration.py  e2e_attrition_funnel.py  prelim_cqc_name_web_rematch.py  run_scoped_discovery.py  smoke_doctify_live.sh  smoke_outreach_contacts.py  smoke_segments_refresh.py
gtm-pipeline/src/gtm_pipeline/: __init__.py  __main__.py  cli.py  config.py  durable_jobs.py  pipeline_jobs.py  service.py
gtm-pipeline/src/gtm_pipeline/companies_house/: __init__.py
gtm-pipeline/src/gtm_pipeline/contacts/: __init__.py  outreach.py  pic.py  prepare.py
gtm-pipeline/src/gtm_pipeline/cqc_api/: __init__.py
gtm-pipeline/src/gtm_pipeline/cqc_directory/: __init__.py  refresh.py
gtm-pipeline/src/gtm_pipeline/cqc_location/: __init__.py
gtm-pipeline/src/gtm_pipeline/doctify/: __init__.py  extract.py  extract_batch.py  listing.py
gtm-pipeline/src/gtm_pipeline/linkedin/: __init__.py  find.py  jobs.py
gtm-pipeline/src/gtm_pipeline/owner_discovery/: __init__.py
gtm-pipeline/src/gtm_pipeline/person_resolve/: __init__.py
gtm-pipeline/src/gtm_pipeline/rocketreach/: __init__.py  client.py  enrich.py
gtm-pipeline/src/gtm_pipeline/scoring/: __init__.py
gtm-pipeline/src/gtm_pipeline/segments/: __init__.py  specialty.py
gtm-pipeline/src/gtm_pipeline/shared/: __init__.py  address.py  match_confidence.py  name.py  og_guard.py  provenance.py  supabase_client.py
gtm-pipeline/src/gtm_pipeline/sync/: __init__.py  clinic_intelligence.py  enrich_cqc_people.py  match_reviews.py  scoped_csv.py  unmatched_owners.py
gtm-pipeline/tests/: test_cqc_directory_refresh.py  test_cqc_location_luna.py  test_cqc_name_web_fallback.py  test_doctify_listing.py  test_doctify_parse.py  test_linkedin_find.py  test_match_reviews.py  test_person_and_scoped_sync.py  test_pic_picker.py  test_pipeline_jobs.py  test_rocketreach_client.py  test_shared_match.py  test_specialty_normaliser.py
gtm-pipeline/tests/fixtures/: cqc_luna_1-19271937885.html
ingestion-pipeline/: README.md  pyproject.toml
ingestion-pipeline/src/ingestion_pipeline/: __init__.py  __main__.py  cli.py  config.py  review.py  staging.py
ingestion-pipeline/src/ingestion_pipeline/lanes/: __init__.py
ingestion-pipeline/src/ingestion_pipeline/shared/: __init__.py  embeddings.py  ingestion_log.py  openrouter_client.py  supabase_client.py
ingestion-pipeline/tests/: test_clinic_csv_parse.py  test_staging.py
marketing-pipeline/: README.md  _compare_ids.json  pyproject.toml
marketing-pipeline/scripts/: probe_ocr_model.py
marketing-pipeline/src/marketing_pipeline/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py
marketing-pipeline/tests/: __init__.py  test_ab_pair_registry.py  test_bootstrap.py  test_build_strategy_brief.py  test_compile_comments_cache.py  test_fetch_catalog.py  test_metrics_layers.py  test_milestone2.py  test_performance_tier.py  test_posted_at.py  test_refresh_pipeline.py  test_segment_align.py  test_sync_mapping.py  test_video_components.py
(+1030 files in other folders)
